# lib/api-spec/openapi.yaml
@@ -288,6 +288,10 @@ components:
     TriageAnalysis:
       type: object
       properties:
+        severity:
+          type: integer
+          minimum: 1
+          maximum: 10
         urgencyLevel:
           $ref: "#/components/schemas/UrgencyLevel"
         disclaimer:
@@ -337,10 +341,6 @@ components:
           type: string
           minLength: 1
           maxLength: 100
-        severity:
-          type: integer
-          minimum: 1
-          maximum: 10
         chronicConditions:
           type: string
           maxLength: 3000
@@ -352,7 +352,6 @@ components:
         - biologicalSex
         - primarySymptoms
         - duration
-        - severity
     Assessment:
       type: object
       properties:
